# stage-sample

./: .gitignore  CMakeLists.txt  README  main.cpp  v_player_config.h  v_player_process.h  v_testing_robot_facade.cpp  v_testing_robot_facade.h
Cmake/: player.config.h.cmake
World/: CMakeLists.txt  polygon.cfg  polygon.inc  polygon.world  robot.inc  simple.cfg  simple.world
